Adjustments for Java 17